<resources>
    <string name="app_name">JOINME</string>
    <string name="user_name">Weilin</string>
    <string name="home_page">主頁</string>
    <string name="self_page">個人頁面</string>
    <string name="activity_page">揪團</string>
    <string name="friends_page">通知</string>
    <string name="message_page">訊息</string>
    <string name="setting_page">設定</string>
    <string name="logout">登出</string>
    <string name="login">登入</string>
    <string name="favorite_page">收藏</string>
    <string name="or">或</string>
    <string name="fblogin">使用Facebook登入</string>
    <string name="forget_pwd">忘記密碼?</string>
    <string name="account">帳號</string>
    <string name="password">密碼</string>
    <string name="register">註冊</string>
    <string name="email">信箱</string>
    <string name="verification_code">驗證碼</string>
    <string name="verify">發送驗證碼</string>
    <string name="title_activity_homepage">homepage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="back_to_login">返回登入</string>
    <string name="send">送出</string>
    <string name="name">姓名</string>
    <string name="birth">生日</string>
    <string name="activity">活動</string>
    <string name="holdon">我舉辦的</string>
    <string name="join">我參加的</string>
    <string name="nearact">附近活動</string>
    <string name="ballsort">球類</string>
    <string name="disaccount">商家優惠</string>
    <string name="singing">ktv</string>
    <string name="information">限時</string>
    <string name="actcontenct">鬥牛啦 時間：2020/04/31 18:00 地點：高雄大學路307號 備註：風雨球場</string>
    <string name="acttitle">鬥牛啦</string>
    <string name="actDate">2020/01/01</string>
    <string name="actdetail">時間：2020/04/31 18:00 地點：高雄大學路307號 備註：風雨球場</string>
    <string name="sigin">報名</string>
    <string name="title_activity_maps">Map</string>
    <string name="recommend_activity">推薦活動</string>
    <string name="push_content">推撥內容</string>
    <string name="age">20歲</string>
    <string name="gender">女</string>
    <string name="addfriend">+好友</string>
    <string name="friend">好友</string>
    <string name="activity_history">活動紀錄</string>
    <string name="title_activity_maps2">Map</string>
    <string name="facebook_app_id">576207433007230</string>
    <string name="fb_login_protocol_scheme">fb576207433007230</string>
    <string name="notice">通知</string>主辦的活動
    <string name="activityHold">主辦的活動</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    <string name="google_maps_key"></string>-->


</resources>
