<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/colorDrawer"
android:orientation="vertical">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@color/colorMain">

    <Button
        android:id="@+id/usernamebtn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="122dp"
        android:layout_height="45dp"
        android:shadowColor="#00FFFFFF"
        android:text="@string/user_name"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.944"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.504" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="115dp"
        android:layout_height="88dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/usernamebtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/head" />

</androidx.constraintlayout.widget.ConstraintLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/homebtn"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@android:color/transparent"
                android:text="@string/home_page"
                android:textSize="25sp"
                android:gravity="center"/>

            <Button
                android:id="@+id/ownpagebtn"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@android:color/transparent"
                android:text="@string/self_page"
                android:textSize="25sp"
                android:gravity="center" />

            <Button
                android:id="@+id/activitybtn"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@android:color/transparent"
                android:text="@string/activity_page"
                android:textSize="25sp"
                android:gravity="center" />

            <Button
                android:id="@+id/friendbtn"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@android:color/transparent"
                android:text="@string/friends_page"
                android:textSize="25sp"
                android:gravity="center" />

        </LinearLayout>

        <Button
            android:text="@string/logout"
            android:id="@+id/logoutbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorDrawer"
            android:textSize="25sp"
            android:gravity="center" />

    </LinearLayout>

</LinearLayout>
</LinearLayout>