<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="453dp"
            android:layout_height="183dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editsuffer"
                android:layout_width="213dp"
                android:layout_height="45dp"
                android:layout_marginStart="91dp"
                android:layout_marginLeft="91dp"
                android:layout_marginTop="82dp"
                android:layout_marginBottom="18dp"
                android:background="@drawable/outside"
                android:inputType="text" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="104dp"
                android:layout_height="127dp">

                <Button
                    android:id="@+id/button16"
                    android:layout_width="45dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="82dp"
                    android:layout_marginEnd="59dp"
                    android:layout_marginRight="59dp"
                    android:background="@drawable/p5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="413dp"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/activitybtn"
                android:layout_width="80dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:background="@drawable/selectactbtn"
                android:onClick="onClick"
                android:text="@string/activity"
                android:textSize="16dp" />

            <Button
                android:id="@+id/joinbtn"
                android:layout_width="82dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:background="@drawable/p2"
                android:onClick="onClick"
                android:text="@string/join"
                android:textSize="16dp" />

            <Button
                android:id="@+id/holdonbtn"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selectactbtn"
                android:onClick="onClick"
                android:text="@string/holdon"
                android:textSize="16dp" />

            <Button
                android:id="@+id/nearactbtn"
                android:layout_width="69dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selectactbtn"
                android:text="@string/nearact"
                android:textSize="16dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="411dp"
            android:layout_height="105dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ballbtn"
                android:layout_width="66dp"
                android:layout_height="43dp"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="454dp"
                android:text="@string/ballsort" />

            <Button
                android:id="@+id/eatbtn"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="454dp"
                android:text="@string/disaccount" />

            <Button
                android:id="@+id/viewbtn"
                android:layout_width="66dp"
                android:layout_height="43dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="454dp"
                android:text="@string/singing" />

            <Button
                android:id="@+id/tripbtn"
                android:layout_width="66dp"
                android:layout_height="43dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="454dp"
                android:text="@string/information" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="397dp"
            android:layout_height="449dp"
            android:orientation="horizontal">

            <ScrollView
                android:layout_width="423dp"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="399dp"
                        android:layout_height="158dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/gotosignup"
                            android:layout_width="151dp"
                            android:layout_height="129dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/head" />

                        <TextView
                            android:id="@+id/actcontent2"
                            android:layout_width="217dp"
                            android:layout_height="79dp"
                            android:text="@string/actcontenct"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="395dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/likebtn"
                            android:layout_width="33dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="50dp"
                            android:layout_marginRight="30dp"
                            android:layout_weight="1"
                            android:background="@drawable/p12" />

                        <Button
                            android:id="@+id/applycounts"
                            android:layout_width="28dp"
                            android:layout_height="68dp"
                            android:layout_marginRight="30dp"
                            android:layout_weight="1"
                            android:background="@drawable/p11" />

                        <Button
                            android:id="@+id/talkbtn"
                            android:layout_width="40dp"
                            android:layout_height="68dp"
                            android:layout_marginRight="40dp"
                            android:layout_weight="1"
                            android:background="@drawable/p10" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="396dp"
                        android:layout_height="160dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/gogo"
                            android:layout_width="151dp"
                            android:layout_height="138dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/head" />

                        <TextView
                            android:id="@+id/textView33"
                            android:layout_width="211dp"
                            android:layout_height="wrap_content"
                            android:text="@string/actcontenct"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="67dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/likeit"
                            android:layout_width="12dp"
                            android:layout_height="67dp"
                            android:layout_marginLeft="50dp"
                            android:layout_marginRight="30dp"
                            android:layout_weight="1"
                            android:background="@drawable/p12" />

                        <Button
                            android:id="@+id/wantjoin"
                            android:layout_width="4dp"
                            android:layout_height="match_parent"
                            android:layout_marginRight="30dp"
                            android:layout_weight="1"
                            android:background="@drawable/p11" />

                        <Button
                            android:id="@+id/comment"
                            android:layout_width="12dp"
                            android:layout_height="match_parent"
                            android:layout_marginRight="50dp"
                            android:layout_weight="1"
                            android:background="@drawable/p10" />

                    </LinearLayout>

                </LinearLayout>
            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="408dp"
            android:layout_height="59dp"
            android:orientation="vertical">

            <include layout="@layout/bottom_bar" />
        </LinearLayout>

    </LinearLayout>

    <fragment
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/mobile_navigation" />

</androidx.constraintlayout.widget.ConstraintLayout>